--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     />
-    <link rel="shortcut icon" href="/logo.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./assets/images/made4u_logo_black_bg.png"
+      type="image/x-icon"
+    />
 
     <!-- smooth scrool with Lenis -->
     <script src="https://unpkg.com/lenis@1.3.14/dist/lenis.min.js"></script>
@@ -40,7 +44,7 @@
 
       <div class="flex items-center gap-5">
         <button
-          class="hidden md:block text-black font-medium bg-white/80 px-4 py-2 rounded-full cursor-pointer"
+          class="hidden md:block text-black font-medium bg-white/80 hover:bg-white/90 px-4 py-2 rounded-full cursor-pointer transition-colors duration-300"
         >
           <i class="fa-solid fa-bars mr-1"></i>
           <span>Menu</span>
@@ -72,7 +76,9 @@
     <!-- Hero Section -->
     <section
       class="relative flex items-center justify-center min-h-screen bg-fixed bg-cover bg-center text-white pt-10 md:pt-20"
-      style="background-image: url('/Add to cart fearure/bg.webp')"
+      style="
+        background-image: url('./assets/images/hero-section-backdrop-image.webp');
+      "
     >
       <div class="absolute inset-0 bg-black/50"></div>
 
@@ -101,12 +107,30 @@
           <button
             class="flex items-center gap-2 rounded-full px-2 py-1 hover:bg-white/10 transition-colors duration-200 cursor-pointer"
           >
-            <img
-              src="/play-svgrepo-com.svg"
+            <!-- <img
+              src="./assets/icons/play.svg"
               alt="play"
               class="w-10 h-10 border p-2.5 rounded-full"
-            />
+            /> -->
 
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              class="w-10 h-10 border p-2.5 rounded-full"
+            >
+              <rect width="24" height="24" fill="none" />
+              <path
+                fill="none"
+                stroke="#fff"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-miterlimit="10"
+                stroke-width="1.5"
+                d="m14 16l4-4m0 0l-4-4m4 4H6"
+              />
+            </svg>
             <span>Join as a Brand</span>
           </button>
         </div>
@@ -135,7 +159,7 @@
         </h2>
         <p class="text-gray-700 max-w-md">
           Made4You connects Nigerian creators to people who care about real
-          quality. Every piece you buy isn’t just fashion — it’s a story of
+          quality. Every piece you buy isn’t just fashion, it’s a story of
           craft, culture, and creativity.
         </p>
         <div class="flex gap-4">
@@ -166,7 +190,7 @@
               “Got my first 20 orders through Made4You. Real people, real
               impact.”
             </p>
-            <p class="text-sm text-gray-500 mt-3">— Ada, Lagos</p>
+            <p class="text-sm text-gray-500 mt-3">Ada, Lagos</p>
           </div>
 
           <div
@@ -176,7 +200,7 @@
               “Feels like the first time local brands are actually taken
               seriously.”
             </p>
-            <p class="text-sm text-gray-500 mt-3">— Tunde, Lagos</p>
+            <p class="text-sm text-gray-500 mt-3">Tunde, Lagos</p>
           </div>
 
           <div
@@ -185,7 +209,7 @@
             <p class="text-gray-700 italic">
               “The interface is smooth, but the mission is even better.”
             </p>
-            <p class="text-sm text-gray-500 mt-3">— Kemi, Port Harcourt</p>
+            <p class="text-sm text-gray-500 mt-3">Kemi, Port Harcourt</p>
           </div>
         </div>
       </div>
@@ -259,13 +283,13 @@
         >
           <div class="relative">
             <img
-              src="/tobias-tullius-Fg15LdqpWrs-unsplash.jpg"
+              src="./assets/images/clothes_collecion.jpg"
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
               class="absolute inset-0 flex items-center cursor-pointer justify-center bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
-              Click to Add to Cart
+              Click to Add to Cart<span class="ml-1">→</span>
             </button>
           </div>
           <h3 class="text-xl font-semibold text-gray-900">
@@ -285,13 +309,13 @@
         >
           <div class="relative">
             <img
-              src="/andres-jasso-PqbL_mxmaUE-unsplash.jpg"
+              src="./assets/images/retro_coat.jpg"
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
               class="absolute inset-0 flex items-center justify-center cursor-pointer bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
-              Click to Add to Cart
+              Click to Add to Cart<span class="ml-1">→</span>
             </button>
           </div>
           <h3 class="text-xl font-semibold text-gray-900">Denim Jacket</h3>
@@ -309,13 +333,13 @@
         >
           <div class="relative cursor-pointer">
             <img
-              src="/angela-bailey-jlo7Bf4tUoY-unsplash.jpg"
+              src="./assets/images/second_backdrop_image.jpg"
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
               class="absolute inset-0 flex items-center justify-center bg-black/60 cursor-pointer text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
-              Click to Add to Cart
+              Click to Add to Cart<span class="ml-1">→</span>
             </button>
           </div>
           <h3 class="text-xl font-semibold text-gray-900">Street Fit</h3>
@@ -333,7 +357,7 @@
     <!-- Why choose us -->
     <section
       class="relative flex flex-col items-center justify-center bg-fixed bg-cover bg-center text-white py-24 px-6 md:px-20"
-      style="background-image: url('/kai-pilger-7YwWjgS7aJs-unsplash.jpg')"
+      style="background-image: url('./assets/images/second_backdrop_image.jpg')"
     >
       <!-- Overlay for readability -->
       <div class="absolute inset-0 bg-black/60"></div>
@@ -452,54 +476,52 @@
     </section>
 
     <!--  partners  -->
-    <section id="partners" class="max-w-6xl mx-auto px-6 md:px-20 py-10">
-      <div class="flex justify-center gap-16 overflow-x-auto no-scrollbar py-4">
+    <section id="partners" class="w-full mx-auto py-10">
+      <h3 class="text-center text-gray-400 tracking-widest uppercase mb-6">
+        50+ trusted partners
+      </h3>
+      <div class="flex justify-center gap-16 overflow-x-auto no-scrollbar py-2">
         <div class="flex-shrink-0">
           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ89qKpl1P8HNvodlfuyFg22rhQZAKabSrdt4690VXVGTzeiBCm"
-            alt="Brand 1"
+            src="https://www.houseofatana.com/cdn/shop/files/grazia_logo_320x.png?v=1643644941"
+            alt="Brand logo"
             class="h-16 md:h-20 object-contain"
           />
         </div>
         <div class="flex-shrink-0">
           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ89qKpl1P8HNvodlfuyFg22rhQZAKabSrdt4690VXVGTzeiBCm"
-            alt="Brand 1"
+            src="https://www.houseofatana.com/cdn/shop/files/harpar-bazar-mnm_320x.png?v=1656393606"
+            alt="Brand logo"
             class="h-16 md:h-20 object-contain"
           />
         </div>
         <div class="flex-shrink-0">
           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ89qKpl1P8HNvodlfuyFg22rhQZAKabSrdt4690VXVGTzeiBCm"
-            alt="Brand 1"
+            src="https://download.logo.wine/logo/Zara_(retailer)/Zara_(retailer)-Logo.wine.png"
+            alt="Brand logo"
+            class="h-16 md:h-20 object-contain"
+          />
+        </div>
+
+        <div class="flex-shrink-0">
+          <img
+            src="https://www.houseofatana.com/cdn/shop/files/Conde_Nast_Traveller_logo_240x.png?v=1711109009"
+            alt="Brand logo"
             class="h-16 md:h-20 object-contain"
           />
         </div>
         <div class="flex-shrink-0">
           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ89qKpl1P8HNvodlfuyFg22rhQZAKabSrdt4690VXVGTzeiBCm"
-            alt="Brand 1"
+            src="https://www.houseofatana.com/cdn/shop/files/baazar-lorff-nm_320x.png?v=1656337904"
+            alt="Brand logo"
             class="h-16 md:h-20 object-contain"
           />
         </div>
+
         <div class="flex-shrink-0">
           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ89qKpl1P8HNvodlfuyFg22rhQZAKabSrdt4690VXVGTzeiBCm"
-            alt="Brand 1"
-            class="h-16 md:h-20 object-contain"
-          />
-        </div>
-        <div class="flex-shrink-0">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ89qKpl1P8HNvodlfuyFg22rhQZAKabSrdt4690VXVGTzeiBCm"
-            alt="Brand 1"
-            class="h-16 md:h-20 object-contain"
-          />
-        </div>
-        <div class="flex-shrink-0">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ89qKpl1P8HNvodlfuyFg22rhQZAKabSrdt4690VXVGTzeiBCm"
-            alt="Brand 1"
+            src="https://www.houseofatana.com/cdn/shop/files/forbes_logo_320x.png?v=1643644941"
+            alt="Brand logo"
             class="h-16 md:h-20 object-contain"
           />
         </div>
@@ -517,7 +539,22 @@
       <div class="space-y-6 max-w-3xl mx-auto">
         <div class="border-b border-gray-300 pb-4">
           <button
-            class="w-full text-left flex justify-between items-center text-gray-800 font-medium py-2 faq-toggle"
+            class="w-full text-left flex justify-between items-center text-gray-800 font-medium py-2 faq-toggle cursor-pointer"
+          >
+            What inspired this brand?
+            <span class="text-xl">+</span>
+          </button>
+          <p class="mt-2 text-gray-600 hidden faq-content">
+            Made4You was inspired by the idea of spotlighting Nigerian
+            creativity. We wanted a space where local brands can reach more
+            people, and shoppers can support homegrown talent with every
+            purchase.
+          </p>
+        </div>
+
+        <div class="border-b border-gray-300 pb-4">
+          <button
+            class="w-full text-left flex justify-between items-center text-gray-800 font-medium py-2 faq-toggle cursor-pointer"
           >
             How do I become a partner brand?
             <span class="text-xl">+</span>
@@ -530,7 +567,7 @@
 
         <div class="border-b border-gray-300 pb-4">
           <button
-            class="w-full text-left flex justify-between items-center text-gray-800 font-medium py-2 faq-toggle"
+            class="w-full text-left flex justify-between items-center text-gray-800 font-medium py-2 faq-toggle cursor-pointer"
           >
             Can I buy as a guest?
             <span class="text-xl">+</span>
@@ -543,7 +580,7 @@
 
         <div class="border-b border-gray-300 pb-4">
           <button
-            class="w-full text-left flex justify-between items-center text-gray-800 font-medium py-2 faq-toggle"
+            class="w-full text-left flex justify-between items-center text-gray-800 font-medium py-2 faq-toggle cursor-pointer"
           >
             How do returns work?
             <span class="text-xl">+</span>
@@ -553,18 +590,33 @@
             initiate the process.
           </p>
         </div>
+
+        <div class="border-b border-gray-300 pb-4">
+          <button
+            class="w-full text-left flex justify-between items-center text-gray-800 font-medium py-2 faq-toggle cursor-pointer"
+          >
+            Do you offer discounts or promo codes?
+            <span class="text-xl">+</span>
+          </button>
+          <p class="mt-2 text-gray-600 hidden faq-content">
+            Yes, we occasionally run promotions and seasonal discounts.
+            Subscribe to our newsletter or follow us on social media to stay
+            updated.
+          </p>
+        </div>
       </div>
     </section>
 
+    <!-- Footer section -->
     <footer
       class="relative bg-gray-900 text-white bg-fixed bg-cover bg-center py-16 md:py-20"
-      style="background-image: url('/logo.png')"
+      style="background-image: url('./assets/images/made4u_logo_black_bg.png')"
     >
       <div class="absolute inset-0 bg-black/70"></div>
 
       <div class="relative z-10 max-w-6xl mx-auto px-6 md:px-20 space-y-16">
         <div
-          class="bg-black/80 border border-white/10 rounded-2xl p-8 flex flex-col md:flex-row items-center justify-between gap-6"
+          class="bg-black/80 border border-white/10 rounded-xl p-8 flex flex-col md:flex-row items-center justify-between gap-6"
         >
           <div class="flex-1">
             <h3 class="text-2xl md:text-3xl font-semibold mb-2">
@@ -584,7 +636,7 @@
             />
             <button
               type="submit"
-              class="px-6 py-3 bg-green-500 text-white rounded-full hover:bg-green-600  cursor-pointer transition"
+              class="px-6 py-3 bg-green-500 text-white rounded-full hover:bg-green-600 cursor-pointer transition"
             >
               Subscribe
             </button>
@@ -624,6 +676,71 @@
         </div>
       </div>
     </footer>
+
+    <!-- Mailing List Modal -->
+    <section
+      class="fixed inset-0 bg-black/60 z-100 flex justify-center items-center px-4"
+    >
+      <div
+        class="bg-white w-full max-w-3xl h-[60vh] md:h-[75vh] rounded-2xl relative overflow-hidden flex flex-col md:flex-row shadow-lg"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          class="absolute right-5 top-2"
+        >
+          <rect width="24" height="24" fill="none" />
+          <path
+            fill="none"
+            stroke="#000"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M18 6L6 18M6 6l12 12"
+          />
+        </svg>
+
+        <!-- Left Image -->
+        <div class="hidden md:block w-1/2 h-full">
+          <img
+            src="./assets/images/Timini-3.jpeg"
+            alt="Mailing List"
+            class="w-full h-full object-cover"
+          />
+        </div>
+
+        <!-- Right Form -->
+        <div
+          class="flex flex-col justify-center items-center w-full md:w-1/2 p-8 text-center"
+        >
+          <div class="flex flex-col gap-10 md:gap-20">
+            <h2 class="text-3xl font-semibold mb-4 font-serif">
+              Join Our Mailing List
+            </h2>
+            <div>
+              <p class="text-gray-600 mb-6">
+                Get exclusive updates, drops, and offers straight to your inbox.
+              </p>
+              <form class="w-full max-w-sm flex flex-col gap-4">
+                <input
+                  type="email"
+                  placeholder="Enter your email"
+                  class="border border-gray-300 rounded-full px-4 py-3 focus:outline-none focus:ring-2 focus:ring-black"
+                />
+                <button
+                  type="submit"
+                  class="bg-black text-white rounded-full py-3 hover:bg-gray-800 transition"
+                >
+                  Subscribe
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="./script.js"></script>
   </body>
