--- a/src/signup.html
+++ b/src/signup.html
@@ -11,18 +11,18 @@
       <!-- Left Image (Hidden on Mobile) -->
       <div class="hidden md:block w-1/2 h-screen relative">
         <img
-          src="/src/assets/images/Timini-3.jpeg"
+          src="./assets/images/Timini-3.jpeg"
           alt="Join Us"
           class="hero-bg active w-full h-full object-cover absolute inset-0"
         />
 
         <img
-          src="/src/assets/images/hoodies_cross.webp"
+          src="./assets/images/hoodies_cross.webp"
           alt="Join Us"
           class="hero-bg w-full h-full object-cover absolute inset-0"
         />
         <img
-          src="/src/assets/images/clothes_man.jpg"
+          src="./assets/images/clothes_man.jpg"
           alt="Join Us"
           class="hero-bg w-full h-full object-cover absolute inset-0"
         />
