--- a/src/redirect.html
+++ b/src/redirect.html
@@ -13,7 +13,7 @@
     >
       <!-- Background -->
       <img
-        src="/src/assets/images/hoodies_renaissance.webp"
+        src="./assets/images/hoodies_renaissance.webp"
         alt="bg"
         class="absolute inset-0 w-full h-full object-cover opacity-40"
       />
