--- a/src/redirect.html
+++ b/src/redirect.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome | Made4You</title>
-        <link href="/src/output.css" rel="stylesheet" />
-    <link href="output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./output.css" />
   </head>
   <body class="font-sans bg-gray-900 text-white">
     <section
@@ -48,4 +47,3 @@
     </section>
   </body>
 </html>
-
