--- a/src/signup.html
+++ b/src/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up | Made4You</title>
-    <link href="/src/output.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./output.css" />
   </head>
   <body class="font-sans bg-gray-100">
     <section class="flex min-h-screen flex-col md:flex-row overflow-hidden">
