--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,13 @@
             placeholder="Search for Lighting"
             class="ml-2 text-sm text-gray-500 outline-none w-120 bg-transparent"
           />
+
+          <datalist id="search-suggestions">
+            <option value="JavaScript"></option>
+            <option value="CSS"></option>
+            <option value="Accessibility"></option>
+            <option value="Web Design"></option>
+          </datalist>
           <i class="fa-solid fa-magnifying-glass text-gray-600"></i>
         </div>
       </div>
@@ -361,7 +368,7 @@
 
     <!-- Why choose us -->
     <section
-      class="relative flex flex-col items-center justify-center bg-fixed bg-cover bg-center text-white py-24 px-6 md:px-20"
+      class="relative flex flex-col items-center justify-center bg-fixed bg-cover bg-center text-white py-24 px-4 md:px-20"
       style="background-image: url('./assets/images/second_backdrop_image.jpg')"
     >
       <div class="absolute inset-0 bg-black/60"></div>
@@ -463,18 +470,18 @@
       </div>
 
       <!-- more ctas -->
-      <div class="flex flex-wrap gap-4 justify-center mt-16 z-1 text-sm">
+      <div class="flex flex-wrap gap-2 md:gap-4 justify-center mt-16 z-1 text-xs md:text-base">
         <a
           href=""
           class="px-6 py-3 bg-white text-black rounded-full hover:bg-white/90 transition"
         >
-          Explore Collections
+          Explore Collection
         </a>
         <a
           href=""
           class="px-6 py-3 border border-gray-400 rounded-full hover:bg-white/10 transition"
         >
-          Become a Partner Brand
+          Become a Partner
         </a>
       </div>
     </section>
@@ -554,9 +561,9 @@
     </section>
 
     <!-- faqs -->
-    <section id="faq" class="max-w-6xl mx-auto px-6 md:px-20 py-20">
+    <section id="faq" class="max-w-6xl mx-auto px-4 md:px-20 py-20">
       <h2
-        class="text-3xl md:text-4xl font-semibold font-serif text-gray-900 text-center mb-12"
+        class="text-2xl md:text-4xl font-semibold font-serif text-gray-900 text-left sm:text-center lg:text-center mb-12"
       >
         Frequently Asked Questions (FAQs)
       </h2>
@@ -658,11 +665,11 @@
               type="email"
               placeholder="Your email address"
               required
-              class="flex-1 w-full px-4 py-3 rounded-full border border-gray-600 focus:outline-none focus:ring-2 focus:ring-green-500"
+              class="flex-1 w-full px-4 py-3 rounded-full border border-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-500"
             />
             <button
               type="submit"
-              class="px-6 py-3 bg-green-500 text-white rounded-full hover:bg-green-600 cursor-pointer transition"
+              class="px-6 py-3 bg-white text-black rounded-full hover:bg-green-600 cursor-pointer transition"
             >
               Subscribe
             </button>
@@ -695,7 +702,7 @@
     </footer>
 
     <!-- Mailing list modal -->
-    <!-- <section
+    <section
       id="mailModal"
       class="fixed inset-0 bg-black/60 z-100 flex justify-center items-center px-4"
     >
@@ -757,7 +764,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <script src="./script.js"></script>
   </body>
