--- a/src/index.html
+++ b/src/index.html
@@ -470,7 +470,9 @@
       </div>
 
       <!-- more ctas -->
-      <div class="flex flex-wrap gap-2 md:gap-4 justify-center mt-16 z-1 text-xs md:text-base">
+      <div
+        class="flex flex-wrap gap-2 md:gap-4 justify-center mt-16 z-1 text-xs md:text-base"
+      >
         <a
           href=""
           class="px-6 py-3 bg-white text-black rounded-full hover:bg-white/90 transition"
@@ -704,7 +706,7 @@
     <!-- Mailing list modal -->
     <section
       id="mailModal"
-      class="fixed inset-0 bg-black/60 z-100 flex justify-center items-center px-4"
+      class="fixed hidden inset-0 bg-black/60 z-100 justify-center items-center px-4 opacity-0 scale-95 transition-all duration-300"
     >
       <div
         class="bg-white w-full max-w-3xl h-[60vh] md:h-[75vh] rounded-2xl relative overflow-hidden flex flex-col md:flex-row shadow-lg"
