--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>more4you | Wear Value. Support Chnage.</title>
-    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="/src/output.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,600&family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -18,11 +18,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon" />
 
     <!-- smooth scrool with Lenis -->
     <script src="https://unpkg.com/lenis@1.3.14/dist/lenis.min.js"></script>
   </head>
+
   <body class="scroll-smooth m-0 p-0 box-border">
     <!-- Navbar -->
     <header
@@ -71,7 +72,7 @@
             class="absolute right-0 size-2 rounded-full bg-green-400"
           ></span>
         </a>
-        <a href="signup.html">
+        <a href="./redirect.html">
           <i class="fa-regular fa-user cursor-pointer"></i
         ></a>
       </div>
@@ -704,7 +705,7 @@
     </footer>
 
     <!-- Mailing list modal -->
-    <section
+    <!-- <section
       id="mailModal"
       class="fixed hidden inset-0 bg-black/60 z-100 justify-center items-center px-4 opacity-0 scale-95 transition-all duration-300"
     >
@@ -766,7 +767,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <script src="./script.js"></script>
   </body>
