--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -86,6 +86,6 @@
       </div>
     </section>
 
-    <script src="signup.js"></script>
+    <script src="./signup.js"></script>
   </body>
 </html>
