--- a/src/index.html
+++ b/src/index.html
@@ -3,22 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>more4you | Wear Value. Support Chnage.</title>
-    <link rel="stylesheet" href="/src/output.css" />
+    <title>more4you - Wear Value. Support Chnage.</title>
+    <meta name="description" content="Wear Value. Support Change" />
+    <link rel="stylesheet" href="../src/output.css" />
+
+    <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,600&family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Carattere&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quintessential&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     />
-    <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon" />
+
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="../src/assets/icons/favicon.ico"
+      type="image/x-icon"
+    />
 
     <!-- smooth scrool with Lenis -->
     <script src="https://unpkg.com/lenis@1.3.14/dist/lenis.min.js"></script>
@@ -34,7 +46,7 @@
       <div
         class="p-0.5 size-11 bg-black rounded-full text-white text-xs font-bold overflow-hidden"
       >
-        <img src="./assets/images/logo.png" alt="m4u" />
+        <img src="../src/assets/images/logo.png" alt="m4u" />
       </div>
 
       <div class="flex items-center gap-5">
@@ -66,13 +78,13 @@
 
       <!-- Icons -->
       <div id="icons" class="flex items-center gap-5 text-white">
-        <a href="" class="relative">
+        <a href="../src/pages/redirect.html" class="relative">
           <i class="fa-solid fa-cart-shopping cursor-pointer"></i>
           <span
             class="absolute right-0 size-2 rounded-full bg-green-400"
           ></span>
         </a>
-        <a href="./redirect.html">
+        <a href="../src/pages/redirect.html">
           <i class="fa-regular fa-user cursor-pointer"></i
         ></a>
       </div>
@@ -82,7 +94,7 @@
     <section
       class="relative flex items-center justify-center min-h-screen bg-fixed bg-cover bg-center text-white pt-10 md:pt-20"
       style="
-        background-image: url('./assets/images/hero-section-backdrop-image.webp');
+        background-image: url('../src/assets/images/hero-section-backdrop-image.webp');
       "
     >
       <div class="absolute inset-0 bg-black/50"></div>
@@ -254,7 +266,7 @@
           Explore Collection
         </h2>
         <a
-          href="/signin.html"
+          href="../src/pages/redirect.html"
           class="text-gray-800 font-medium hover:underline text-sm md:text-base hover:text-black"
           >See All →</a
         >
@@ -292,10 +304,11 @@
         >
           <div class="relative">
             <img
-              src="./assets/images/clothes_ankara-lady.webp"
+              src="/src/assets/images/clothes_ankara-lady.webp"
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
+              onclick="window.location.href='../src/pages/redirect.html'"
               class="absolute inset-0 flex items-center cursor-pointer justify-center bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -306,7 +319,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦660,700</p>
           <button
-            onclick="window.location.href='./redirect.html'"
+            onclick="window.location.href='../src/pages/redirect.html'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
@@ -318,10 +331,11 @@
         >
           <div class="relative">
             <img
-              src="./assets/images/retro_coat.jpg"
+              src="/src/assets/images/retro_coat.jpg"
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
+              onclick="window.location.href='../src/pages/redirect.html'"
               class="absolute inset-0 flex items-center justify-center cursor-pointer bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -332,7 +346,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦70,000</p>
           <button
-            onclick="window.location.href='/signup.html'"
+            onclick="window.location.href='../src/pages/redirect.html'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
@@ -344,10 +358,11 @@
         >
           <div class="relative cursor-pointer">
             <img
-              src="./assets/images/clothes_man.jpg"
+              src="/src/assets/images/clothes_man.jpg"
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
+              onclick="window.location.href='../src/pages/redirect.html'"
               class="absolute inset-0 flex items-center justify-center bg-black/60 cursor-pointer text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -358,7 +373,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦205,000</p>
           <button
-            onclick="window.location.href='/signup.html'"
+            onclick="window.location.href='../src/pages/redirect.html'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
@@ -370,7 +385,7 @@
     <!-- Why choose us -->
     <section
       class="relative flex flex-col items-center justify-center bg-fixed bg-cover bg-center text-white py-24 px-4 md:px-20"
-      style="background-image: url('./assets/images/second_backdrop_image.jpg')"
+      style="background-image: url('/src/assets/images/second_backdrop_image.jpg')"
     >
       <div class="absolute inset-0 bg-black/60"></div>
 
@@ -645,7 +660,7 @@
     <!-- Footer section -->
     <footer
       class="relative bg-gray-900 text-white bg-fixed bg-cover bg-center py-16 md:py-20"
-      style="background-image: url('./assets/images/made4u_logo_black_bg.png')"
+      style="background-image: url('/src/assets/images/made4u_logo_black_bg.png')"
     >
       <div class="absolute inset-0 bg-black/70"></div>
 
@@ -672,7 +687,7 @@
             />
             <button
               type="submit"
-              class="px-6 py-3 bg-white text-black rounded-full hover:bg-green-600 cursor-pointer transition"
+              class="px-6 py-3 bg-white text-black rounded-full hover:bg-white/90 cursor-pointer transition"
             >
               Subscribe
             </button>
@@ -769,6 +784,6 @@
       </div>
     </section> -->
 
-    <script src="./script.js"></script>
+    <script src="../src/js/script.js"></script>
   </body>
 </html>
