`Update link to output.css in index.html`

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>more4you - Wear Value. Support Chnage.</title>
     <meta name="description" content="Wear Value. Support Change" />
-    <link rel="stylesheet" href="../src/output.css" />
+    <link rel="stylesheet" href="/src/output.css" />
 
     <!-- Google Font -->
     <link
