`Update relative URLs to use./ instead of../`

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="../src/assets/icons/favicon.ico"
+      href="./assets/images/logo.png"
       type="image/x-icon"
     />
 
@@ -46,7 +46,7 @@
       <div
         class="p-0.5 size-11 bg-black rounded-full text-white text-xs font-bold overflow-hidden"
       >
-        <img src="../src/assets/images/logo.png" alt="m4u" />
+        <img src="./assets/images/logo.png" alt="m4u" />
       </div>
 
       <div class="flex items-center gap-5">
@@ -78,13 +78,13 @@
 
       <!-- Icons -->
       <div id="icons" class="flex items-center gap-5 text-white">
-        <a href="../src/pages/redirect.html" class="relative">
+        <a href="./pages/redirect.html" class="relative">
           <i class="fa-solid fa-cart-shopping cursor-pointer"></i>
           <span
             class="absolute right-0 size-2 rounded-full bg-green-400"
           ></span>
         </a>
-        <a href="../src/pages/redirect.html">
+        <a href="./pages/redirect.html">
           <i class="fa-regular fa-user cursor-pointer"></i
         ></a>
       </div>
@@ -94,7 +94,7 @@
     <section
       class="relative flex items-center justify-center min-h-screen bg-fixed bg-cover bg-center text-white pt-10 md:pt-20"
       style="
-        background-image: url('../src/assets/images/hero-section-backdrop-image.webp');
+        background-image: url('./assets/images/hero-section-backdrop-image.webp');
       "
     >
       <div class="absolute inset-0 bg-black/50"></div>
@@ -189,7 +189,7 @@
             Explore Collections
           </a>
           <a
-            href="/signup"
+            href="./pages/signup.html"
             class="px-6 py-3 border border-gray-400 rounded-full hover:bg-gray-100 transition"
           >
             Join Us
@@ -266,7 +266,7 @@
           Explore Collection
         </h2>
         <a
-          href="../src/pages/redirect.html"
+          href="./pages/redirect.html"
           class="text-gray-800 font-medium hover:underline text-sm md:text-base hover:text-black"
           >See All →</a
         >
@@ -304,11 +304,11 @@
         >
           <div class="relative">
             <img
-              src="/src/assets/images/clothes_ankara-lady.webp"
+              src="./assets/images/clothes_ankara-lady.webp"
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
-              onclick="window.location.href='../src/pages/redirect.html'"
+              onclick="window.location.href='./pages/redirect.html'"
               class="absolute inset-0 flex items-center cursor-pointer justify-center bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -319,7 +319,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦660,700</p>
           <button
-            onclick="window.location.href='../src/pages/redirect.html'"
+            onclick="window.location.href='./pages/redirect.html'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
@@ -331,11 +331,11 @@
         >
           <div class="relative">
             <img
-              src="/src/assets/images/retro_coat.jpg"
+              src="./assets/images/retro_coat.jpg"
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
-              onclick="window.location.href='../src/pages/redirect.html'"
+              onclick="window.location.href='./pages/redirect.html'"
               class="absolute inset-0 flex items-center justify-center cursor-pointer bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -346,7 +346,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦70,000</p>
           <button
-            onclick="window.location.href='../src/pages/redirect.html'"
+            onclick="window.location.href='./pages/redirect.html'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
@@ -358,11 +358,11 @@
         >
           <div class="relative cursor-pointer">
             <img
-              src="/src/assets/images/clothes_man.jpg"
+              src="./assets/images/clothes_man.jpg"
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
-              onclick="window.location.href='../src/pages/redirect.html'"
+              onclick="window.location.href='./pages/redirect.html'"
               class="absolute inset-0 flex items-center justify-center bg-black/60 cursor-pointer text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -373,7 +373,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦205,000</p>
           <button
-            onclick="window.location.href='../src/pages/redirect.html'"
+            onclick="window.location.href='./pages/redirect.html'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
