modified:   src/index.html

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="./assets/images/logo.png"
+      href="./assets/icons/favicon.ico"
       type="image/x-icon"
     />
 
@@ -385,7 +385,7 @@
     <!-- Why choose us -->
     <section
       class="relative flex flex-col items-center justify-center bg-fixed bg-cover bg-center text-white py-24 px-4 md:px-20"
-      style="background-image: url('/src/assets/images/second_backdrop_image.jpg')"
+      style="background-image: url('./assets/images/second_backdrop_image.jpg')"
     >
       <div class="absolute inset-0 bg-black/60"></div>
 
@@ -784,6 +784,6 @@
       </div>
     </section> -->
 
-    <script src="../src/js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
